# zmij-fastjson

./: .editorconfig  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  publish-pyzmij.yml
bench/: README.md  datasets.py  pyperf_float.py  pyperf_json.py  pyperf_macro.py  pyperf_ndarray.py  pyperf_util.py
bench/results/: .gitkeep
fastjson/: MANIFEST.in  README.md  pyproject.toml  setup.py
fastjson/python/fastjson/: __init__.py
fastjson/src/: fastjson_module.c
fastjson/tests/: test_allow_nan.py  test_dropin_exceptions.py  test_dropin_matrix.py  test_dropin_stdlib_json.py  test_dumps_ndarray.py  test_fastjson_edge_and_fuzz.py  test_fastpath_list_float.py  test_native_loaded.py  test_smoke.py
pyzmij/: README.md  RELEASING.md  VENDORED.md  pyproject.toml  setup.py
pyzmij/python/pyzmij/: __init__.py
pyzmij/src/: pyzmij_module.c
pyzmij/tests/: test_backend.py  test_bench_format_many.py  test_edge_and_fuzz.py  test_format_api.py  test_format_finite_basic.py  test_format_finite_errors.py  test_native_loaded.py  test_repr_compat.py  test_smoke.py
tools/: plot_pyperf_svg.py  report_pyperf.py
