[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastjson"
version = "0.1.0"
description = "High-performance JSON serializer using Żmij algorithm"
readme = "README.md"
license = "MIT"
authors = [{name = "zmij-fastjson contributors"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["json", "serialization", "float", "performance", "zmij"]

[project.urls]
Homepage = "https://github.com/mp0rta/zmij-fastjson"
Repository = "https://github.com/mp0rta/zmij-fastjson"
Issues = "https://github.com/mp0rta/zmij-fastjson/issues"

[project.optional-dependencies]
dev = ["pytest"]
numpy = ["numpy>=1.20"]
